# autoreply

./: .gitignore  AGENTS.md  AT_PROTOCOL_OAUTH_STATUS.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION-SUMMARY.md  OAUTH_IMPLEMENTATION_MAPPING.md  OAUTH_IMPLEMENTATION_VERIFICATION.md  OUTPUT_EXAMPLES.md  PR_COMPARISON.md  PR_COMPARISON_36_vs_37.md  PR_COMPARISON_REPORT.md  PR_COMPARISON_SUMMARY.md  README-GO.md  README.md  README_ASSESSMENT.md  TASK_COMPLETION_SUMMARY.md  TEST-COVERAGE-SUMMARY.md  docs_semantic_annealing_proposal.md  go.mod  go.sum  index.html  index.js  mcp-test.js  package-lock.json  package.json  test_go_mcp.sh
.gemini/: settings.json
cmd/bluesky-mcp/: main.go
docs/: 0-assess.md  1-migrate-to-atcute.md  10-integration-test-strategy-rust.md  10-trial.md  11-auth.md  11-login.md  11.1-auth-mcp-cli.md  12-auth-go-rust-comparison.md  12-auth-implementation-plan.md  12-auth-plan.md  12-auth-quick-ref.md  12-sentencepiece-fuzzy-search-analysis.md  12.1-auth-quick-reference.md  12.1-sentencepiece-quick-start.md  12.1.1-sentencepiece-rust.md  12.1.2-sentencepiece-go.md  12.2.1-deeper-rust.md  12.2.2-deeper-go.md  12.2.3-deeper-rust45.md  12.2.4-deeper-go45.md  12.2.5-deeper-boost.md  12.2.6-carry-state.md  13-auth-planning-complete.md  13-gemini-cli-verify.md  13.1-gh-copilot-cli-verify.md  14-auth-diagrams.md  14-semantic-vocabulary.md  15-sentencepiece-freeze.md  16-mcp-schemas.md  17-login-based-search.md  17-more-features.md  18-oauth-full.md  19-improvements.md  19.1-search.md  2-new-architecture.md  20-embeds.md  21-facets-implementation-summary.md  3-detour-model2vec.md  4-detour-llm-compiled.md  5-detour-tokenisation-stencepiece.md  (+12 more)
gemma-data/: .gitignore  AGENTS.md  README.md  en.txt
gemma-data/rust-prep/: Cargo.toml  README.md  pca_quantize.py
gemma-data/rust-prep/examples/: embed_demo.rs
gemma-data/rust-prep/src/: main.rs  quantize.rs
go-server/: .gitignore  CHANGELOG.md  Dockerfile  OAUTH_VERIFICATION.md  README.md  go.mod  go.sum  test_dual_mode.sh  test_mcp.json  test_mcp_complete.json  test_oauth_simulation.sh  version.go
go-server/.gemini/: settings.json  settings.json.orig
go-server/cmd/autoreply/: main.go  test_tools_list.go
go-server/docs/: AUTHENTICATION_EXAMPLES.md  POST_AND_REACT_TOOLS.md
go-server/internal/auth/: README.md  atproto_oauth.go  atproto_oauth_test.go  callback.go  client.go  config.go  config_test.go  credentials.go  credentials_test.go  device.go  dpop.go  dpop_test.go  errors.go  identity.go  keyring.go  manager.go  manager_test.go  metadata.go  oauth.go  oauth_callback.go  oauth_test.go  pkce.go  pkce_test.go  session.go  types.go  types_test.go
go-server/internal/bluesky/: api_client.go  car.go  car_fuzzy_test.go  car_test.go  client.go  did.go  did_test.go  mst.go  mst_test.go  records.go  uri.go  uri_test.go
go-server/internal/cache/: manager.go  manager_test.go
go-server/internal/cli/: adapter.go  args.go  args_test.go  auth_commands.go  login_adapter.go  oauth_login_adapter.go  prompt.go  registry.go  runner.go
go-server/internal/config/: config.go
go-server/internal/mcp/: guard_no_promptid_test.go  login_elicitation_roundtrip_test.go  server.go  server_test.go  tools_list_test.go  types.go
go-server/internal/testutil/: mock_auth.go  mock_server.go
go-server/internal/tools/: accounts.go  auth_status.go  device_login.go  feed.go  feed_test.go  guard_no_promptid_test.go  login.go  login_elicitation_test.go  login_test.go  logout.go  oauth_login.go  post.go  post_test.go  postformat.go  postformat_test.go  profile.go  profile_test.go  react.go  react_test.go  search.go  search_test.go  thread.go  thread_test.go  util.go  util_test.go
go-server/pkg/errors/: errors.go
go-server/pkg/sentencepiece/: README.md  model.go  normalizer.go  sentencepiece.go  (+2 more)
helloworld/: package.json  tinymcp.js
internal/bluesky/: car.go  client.go  did.go  records.go
internal/cache/: manager.go
internal/config/: config.go
internal/mcp/: server.go  types.go
internal/tools/: common.go  profile.go  search.go
pkg/errors/: errors.go
rust-server/: .gitignore  CHANGELOG.md  CLI-USAGE.md  COVERAGE.md  Cargo.toml  IMPLEMENTATION-SUMMARY.md  PROCEED-FIX.md  README.md  build.rs  build.sh  demo_auth.sh  run-coverage.ps1  test_mcp.sh
rust-server/.gemini/: settings.json  settings.json.orig
rust-server/docs/: AUTH-IMPLEMENTATION-COMPLETE.md  OAuth-Browser-Flow-Complete.md  OAuth-Complete-Analysis.md  OAuth-Failure-Analysis.md  OAuth-Implementation-Complete.md  OAuth-Implementation-Fix-Plan.md  OAuth-Implementation-Plan.md  OAuth-Implementation-Summary.md  OAuth-Next-Steps.md
rust-server/examples/: embed_demo.rs
rust-server/proto/: sentencepiece_model.proto
rust-server/src/: cache.rs  cli.rs  error.rs  http.rs  lib.rs  main.rs  mcp.rs  sentencepiece_stub.rs  tests_login_elicitation.rs  tests_mcp_adjustments.rs  utils.rs
rust-server/src/auth/: README.md  atproto_oauth.rs  auth_helper_tests.rs  callback_server.rs  config.rs  credentials.rs  dpop.rs  keyring.rs  login_flow.rs  manager.rs  mod.rs  oauth.rs  oauth_atproto.rs  oauth_callback.rs  oauth_tests.rs  session.rs  storage.rs  types.rs
rust-server/src/bluesky/: car.rs  client.rs  did.rs  did_fixed.rs  mod.rs  mst.rs  provider.rs  provider_edge_case_tests.rs  records.rs  uri.rs
rust-server/src/car/: base32.rs  cbor.rs  error.rs  mod.rs  multihash.rs  reader.rs  reader_clean.rs  types.rs
rust-server/src/embeddings/: engine.rs  loader.rs  mod.rs
rust-server/src/search/: engine.rs  fuzzy.rs  mod.rs  parser.rs  property_tests.rs  property_tests2.rs  ranking.rs
rust-server/src/sentencepiece/: loader.rs  mod.rs  normalizer.rs  tokenizer.rs  trie.rs
rust-server/src/tools/: auth_status.rs  cli_integration_tests.rs  feed.rs  login.rs  mod.rs  post.rs  post_format.rs  profile.rs  react.rs  search.rs  thread.rs  tools_argument_tests.rs  util.rs
src/: cli.js  core.js  fetch-proxied.js  keytar.js  mcp.js  post-schema.js  search-flat.js  storage.js  tokenize.js  tools.js
src/gemma/: .gitignore  license-prohibited-use.md  license.md  make-tokenizer-short.js
(+2 files in other folders)
