[package]
name = "autoreply"
version = "0.2.0"
edition = "2021"
description = "autoreply: Model Context Protocol server for Bluesky profile and post search functionality"
authors = ["Oleg Mihailik"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oyin.bo/autoreply"
repository = "https://github.com/oyin.bo/autoreply"
keywords = ["mcp", "bluesky", "atproto", "server"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "autoreply"
path = "src/main.rs"

[dependencies]
# Required Crates as specified in docs/7.1-rust.md
# atrium-api = "0.24"
# atrium-xrpc-client = "0.5"
# atrium-repo = "0.1"

# Core dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "native-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# IPLD and CAR parsing
tokio-stream = "0.1"
futures = "0.3"

# Text processing
unicode-normalization = "0.1"
regex = "1.10"
aho-corasick = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2"
fs2 = "0.4"
dirs = "5.0"

# Authentication
keyring = "2.3"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2.1"

# OAuth and JWT
jsonwebtoken = "9.3"
p256 = { version = "0.13", features = ["ecdsa", "jwk"] }
uuid = { version = "1.0", features = ["v4"] }
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }

# CLI and Schema Unification
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
schemars = "0.8"
rpassword = "7.3"
open = "5.0"

# Additional dependencies
hex = "0.4"

# New dependencies for fast CAR reader
serde_cbor = "0.11"
unsigned-varint = "0.7"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.23"

[features]
default = []
oauth-server = ["axum", "tower"]
