[package]
name = "autoreply"
version = "0.2.0"
edition = "2021"
description = "autoreply: Model Context Protocol server for Bluesky profile and post search functionality"
authors = ["Oleg Mihailik"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oyin.bo/autoreply"
repository = "https://github.com/oyin.bo/autoreply"
keywords = ["mcp", "bluesky", "atproto", "server"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "autoreply"
path = "src/main.rs"

[dependencies]
# Required Crates as specified in docs/7.1-rust.md
# atrium-api = "0.24"
# atrium-xrpc-client = "0.5"
# atrium-repo = "0.1"

# Core dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "native-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# IPLD and CAR parsing
tokio-stream = "0.1"
futures = "0.3"

# Text processing
unicode-normalization = "0.1"
regex = "1.10"
aho-corasick = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2"
fs2 = "0.4"
dirs = "5.0"

# CLI and Schema Unification
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
schemars = "0.8"

# Additional dependencies
hex = "0.4"

# New dependencies for fast CAR reader
serde_cbor = "0.11"
unsigned-varint = "0.7"
thiserror = "1.0"

# Authentication and credential storage
keyring = "2.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

# OAuth dependencies (using 0.12 for Rust 1.89 compatibility)
atproto-oauth = "0.12"
atproto-client = "0.12"
atproto-identity = "0.12"
axum = "0.7"
tower = "0.5"
webbrowser = "1.0"
rand = "0.8"
sha2 = "0.10"
urlencoding = "2.1"
jsonwebtoken = "9.3"
p256 = { version = "0.13", features = ["ecdsa"] }

[dev-dependencies]
tempfile = "3.23"
