[package]
name = "autoreply"
version = "0.3.7"
edition = "2021"
description = "autoreply: Model Context Protocol server for Bluesky profile and post search functionality"
authors = ["Oleg Mihailik"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oyin.bo/autoreply"
repository = "https://github.com/oyin.bo/autoreply"
keywords = ["mcp", "bluesky", "atproto", "server"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "autoreply"
path = "src/main.rs"

[features]
default = []
embed-model = []  # Embed 17MB directly into binary
# Experimental SentencePiece tokenization support (not production-ready)
experimental-sentencepiece = ["prost", "prost-build"]

[dependencies]
byteorder = "1.5"

# Core dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "native-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# IPLD and CAR parsing
futures = "0.3"

# Text processing
unicode-normalization = "0.1"
unicode-segmentation = "1.10"
regex = "1.10"
nucleo-matcher = "0.3"

# SentencePiece protobuf support (optional, enabled by experimental-sentencepiece feature)
prost = { version = "0.12", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2"
dirs = "5.0"

# CLI and Schema Unification
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
schemars = "0.8"

# Additional dependencies
hex = "0.4"

# Error handling
thiserror = "1.0"

# Authentication and credential storage
keyring = "2.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

# OAuth callback server
axum = "0.7"
webbrowser = "1.0"
rand = "0.8"
sha2 = "0.10"
urlencoding = "2.1"
jsonwebtoken = "9.3"
p256 = { version = "0.13", features = ["ecdsa"] }
bs58 = "0.5.1"
serde_bytes = "0.11.19"

[dev-dependencies]
tempfile = "3.23"
proptest = "1.0"

[build-dependencies]
prost-build = { version = "0.12", optional = true }
